fixed overflow issue in homepage

--- a/GeneScope/frontend/pages/fileupload/FileUploadPage.css
+++ b/GeneScope/frontend/pages/fileupload/FileUploadPage.css
@@ -7,7 +7,8 @@
     align-items: center;
     margin-left: 100px; /* Add this line to create space for the navbar */
     background-color: #f7faff;
-    overflow: hidden;
+    overflow: auto;
+    overflow-x: hidden;
     margin-left: 240px; /* Matches the navbar width */
   }
 
